# athena-playground

./: .gitignore  Dockerfile.athena  README.md  build-docker.sh  execute_ath.sh  temp.ath
.github/workflows/: nodejs.yml  rust.yml
app/: Cargo.toml  test.ath
app/frontend/: _app.js  index.html  index.js  package-lock.json  package.json  tree.js  webpack.config.js
app/frontend/ath-files/: index.js
app/frontend/styles/: Home.module.css  globals.css
app/src/: athena_sandbox.rs  main.rs  output.rs  server.rs
