[package]
name = "athena-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.58"
axum = {version = "0.5.16", default-features = true, features = ["json", "headers"] }
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.6.0"
serde = {version = "1.0.140", features = ["derive"]}
tempfile = "3.3.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "process", "fs"] }
tokio-stream = {version = "0.1.9", default-features = true, features = ["io-util"] }
tower-http = { version = "0.3.4", features = ["trace", "cors", "limit", "fs", "set-header"] }
tracing = "0.1.35"
uuid = {version = "1.1.2", features = ["fast-rng", "v4"]}
